[project]
name = "api"
version = "0.1.0"
description = "Servicio encargado del submódulo de impresión de ETQ"
authors = [
    {name = "freddy.morales", email = "freddy_alexander@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "fastapi (>=0.111.0,<1.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "requests (==2.32.4)",
    "setuptools (==78.1.1)",
    "urllib3 (==2.5.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
coverage = ">=7.8.0,<8.0.0"
pytest-asyncio = ">=1.1.0,<2.0.0"
httpx = "^0.28.1"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*httpx.*starlette.*testclient.*deprecated.*"
]

[tool.black]
line-length = 140
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"